--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -8,3 +8,8 @@ body {
   /* Анимация */
   transition-colors duration-300 ease-in-out;
 }
+
+/* TODO: Перенести куда-нибудь, тут только HTML-элементы!!! */
+.container {
+  @apply mx-auto;
+}
