--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,3 +12,4 @@
 @import "./components/header.css";
 @import "./components/hero.css";
 @import "./components/section-block.css";
+@import "./components/audience-switcher.css";
