--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,9 @@
 @import "./reusable.css"; /* Утилиты */
 @import "./elements.css";
 
+/* Скелетон */
+@import "./skeleton.css";
+
 @import "./components/header.css";
 @import "./components/hero.css";
 @import "./components/section-block.css";
