--- a/src/styles/components/audience-switcher.css
+++ b/src/styles/components/audience-switcher.css
@@ -12,7 +12,8 @@
         bg-palette-secondary
         border-rounded-variants
         px-4 py-1.5 text-center
-        flex-1 w-full sm:w-auto;
+        flex-1 w-full sm:w-auto
+        cursor-pointer;
     }
   }
 }
