--- a/src/styles/components/audience-switcher.css
+++ b/src/styles/components/audience-switcher.css
@@ -13,7 +13,8 @@
         border-rounded-variants
         px-4 py-1.5 text-center
         flex-1 w-full sm:w-auto
-        cursor-pointer;
+        cursor-pointer
+        fadeInUp ui-hover;
 
       .audience-switcher__button {
         @apply cursor-[inherit];
