feat(ui): добавлен проп skeletonLineWidth для настройки ширины скелета заголовка
В компонент SectionBlockHeading добавлен необязательный проп
skeletonLineWidth, позволяющий задавать ширину заголовка-скелета
в единицах ch через CSS-переменную.

В src/styles/skeleton.css реализовано чтение этой переменной
и применение ширины к соответствующему блоку.

--- a/src/styles/skeleton.css
+++ b/src/styles/skeleton.css
@@ -4,8 +4,9 @@
 
 .skeleton-line {
   @apply inline-block border-rounded-variants
-    h-[1em] w-48 animate-pulse
-    bg-palette-text-50;
+    h-[1em] animate-pulse
+    bg-palette-text-50
+    w-[calc(var(--skeletonLineWidth, 32)ch)];
 }
 
 .skeleton-lines {
